--- a/style.css
+++ b/style.css
@@ -1,4 +1,90 @@
-button {
-    
+html{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+button {
+    all: unset;
+    cursor: pointer;
+    text-align: center;
+    border: 1px white solid;
+    background-color: rgb(24, 118, 149);
+    color: white;
+    border-radius: 3px;
+    font-size: 30px;
+  }
+
+  button:hover {
+    background-color: rgb(65, 165, 168);
+  }
+
+.page-container{
+    max-width: 400px;
+    width: 400px;
+}
+.calculator-container{
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    border: 2px solid grey;
+    border-radius: 5px;
+    box-shadow: 2px;    
+}
+
+.calculator-display{
+    display: flex;
+    flex-direction: column;
+}
+
+.calc-display-input{
+    padding:10px;
+    height: 30px;
+    flex: 1 1 auto;
+    font-size: 30px;
+    background-color:rgb(217, 223, 223);
+    text-align: right;
+}
+.calc-display-result{
+    padding: 10px;
+    height: 40px;
+    flex: 1 1 auto;
+    font-size: 40px;
+    background-color:rgb(216, 220, 219);
+    text-align: right;
+}
+
+.main-buttons-container{
+    display: flex;
+}
+
+#clear-button{
+    background-color: rgb(20, 75, 122);
+}
+
+.main-button{
+    flex: 1 1 auto;
+    height: 50px;
+    width: 300px;
+}
+
+#delete-button{
+    background-color: rgb(190, 111, 69);
+}
+
+.operator-buttons-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.operator-buttons-row{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    height: 50px;
+
+}
+
+.pad-button{
+    flex: 1 1 auto;
+    height: 50px;
+    width: 50px;
+}
